# perlin

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  README.org  roadmap.org  todo.org
bench_results/: 02-08-2016_b899919.res  02-08-2016_b899919.size  21-07-2016_1.res  21-07-2016_1.size  21-07-2016_9ab2d17.res  21-07-2016_9ab2d17.size  21-07-2016_aafa7b9.res  21-07-2016_aafa7b9.size
benches/: boolean_index.rs  fsstorage.rs  indexing.rs
benches/utils/: mod.rs
examples/custom-data/: main.rs
examples/text-retrieval/: main.rs
examples/tictactoe/: main.rs
notes/: fields.org  roadmap_1_0.html  roadmap_1_0.org
perlin-derive/: Cargo.toml
perlin-derive/src/: index_struct.rs  lib.rs  perlin_document.rs  pipeline_struct.rs
src/: document.rs  document_index.rs  field.rs  lib.rs  perlin_index.rs  query.rs  utils.rs
src/chunked_storage/: chunk_ref.rs  indexing_chunk.rs  mod.rs
src/compressor/: mod.rs  naive_compressor.rs
src/field/: filter.rs  filter_field.rs  hierarchy.rs  hierarchy_field.rs  mod.rs
src/index/: boolean_index.rs  listing.rs  mod.rs  posting.rs  vocabulary.rs
src/language/: integers.rs  mod.rs  pipeline.rs  stemmers.rs  stopword_filter.rs
src/page_manager/: block.rs  block_iter.rs  fs_page_manager.rs  mod.rs  page.rs  ram_page_cache.rs  ram_page_manager.rs
src/query/: mod.rs  operators.rs  query_pipeline.rs
src/storage/: byte_code.rs  chunked_storage.rs  comp_ram_storage.rs  compression.rs  fs_storage.rs  mod.rs  persistence.rs  ram_storage.rs
src/test_utils/: mod.rs
src/utils/: counter.rs  (+9 more)
tests/: boolean_index.rs  readme_usage.rs
(+27 files in other folders)
