[package]
name = "perlin"
version = "0.1.0"
authors = ["Jakob Demler <jdemler@curry-software.com>"]
description = "A lazy, zero-allocation and data-agnostic Information Retrieval library"
documentation = "https://doc.perlin-ir.org"
homepage = "https://www.perlin-ir.org"
repository = "https://github.com/JDemler/perlin"
readme = "README.md"
keywords = ["information", "retrieval", "search", "text", "engine"]
license = "MIT"

[dependencies.perlin-core]
path = "../perlin-core"

[dependencies.rust-stemmers]
git = "https://github.com/JDemler/rust-stemmers.git"

[dependencies.perlin-derive]
path = "perlin-derive"

[features]
bench=[]